# DisplayBoy

./: ATTRIBUTIONS.md  CRT.go  Cargo.toml  FloatColor.go  GBColor.go  GBMono.go  LICENSE  Math.go  README.md  go.mod  go.sum  index.html  main.go
src/: crt.rs  gb.rs  gbc.rs  lib.rs  scaling.rs  shader_support.rs
www/: index.html  index.js  manifest.json  package-lock.json  package.json
